[ADD] SignIn, SignUp

--- a/src/styles/Palette/Palette.scss
+++ b/src/styles/Palette/Palette.scss
@@ -3,6 +3,7 @@ $orange: #e67e22;
 $yellow: #f1c40f;
 $green: #27ae60;
 $blue: #0984e3;
+$boldBlue: #6a5ffb;
 $skyBlue: #00a8ff;
 $indigo: #192a56;
 $purple: #6c5ce7;
