--- a/src/components/Common/Navbar/Navbar.scss
+++ b/src/components/Common/Navbar/Navbar.scss
@@ -1,1 +1,8 @@
-/* your css code */
+@import '../../../styles/Palette/Palette.scss';
+@import '../../../styles/Font_Scheme/Font_Scheme.scss';
+
+.Navbar {
+	width: 300px;
+	height: 100vh;
+	background-color: $white;
+}
