--- a/src/components/Common/Navbar/Navbar.scss
+++ b/src/components/Common/Navbar/Navbar.scss
@@ -2,7 +2,29 @@
 @import '../../../styles/Font_Scheme/Font_Scheme.scss';
 
 .Navbar {
-	width: 300px;
+	width: 100px;
 	height: 100vh;
 	background-color: $white;
+	overflow-y: auto;
+
+	&-ItemList {
+		height: 100vh;
+		display: flex;
+		display: -webkit-flex;
+		flex-direction: column;
+		justify-content: space-around;
+		align-items: center;
+		list-style: none;
+
+		&-Item {
+			display: flex;
+			display: -webkit-flex;
+			flex-direction: column;
+			align-items: center;
+
+			&-Active {
+				background-color: $primary;
+			}
+		}
+	}
 }
