--- a/src/components/Common/PageTemplate/PageTemplate.scss
+++ b/src/components/Common/PageTemplate/PageTemplate.scss
@@ -5,4 +5,15 @@
 	width: 100%;
 	height: 100vh;
 	background-color: $primary;
+	overflow: hidden;
+
+	&-HeaderBottom {
+		display: flex;
+		display: -webkit-flex;
+	}
+
+	&-Contents {
+		width: 100%;
+		padding: 20px;
+	}
 }
