--- a/src/styles/Palette/Palette.scss
+++ b/src/styles/Palette/Palette.scss
@@ -9,7 +9,7 @@ $indigo: #192a56;
 $purple: #6c5ce7;
 $mint: #00d2d3;
 $pink: #e84393;
-$lighterGray: #dfe6e9;
+$lighterGray: #ecf0f1;
 $gray: #b2bec3;
 $white: #ffffff;
 $black: #000000;
