--- a/src/components/Common/Navbar/Navbar.scss
+++ b/src/components/Common/Navbar/Navbar.scss
@@ -2,7 +2,7 @@
 @import '../../../styles/Font_Scheme/Font_Scheme.scss';
 
 .Navbar {
-	width: 100px;
+	width: 150px;
 	height: 100vh;
 	background-color: $white;
 	overflow-y: auto;
@@ -21,9 +21,18 @@
 			display: -webkit-flex;
 			flex-direction: column;
 			align-items: center;
+			justify-content: space-around;
+			width: 100%;
+			height: calc(100vh / 6);
+			cursor: pointer;
+
+			&:hover {
+				background-color: $primary;
+				transition: all 0.3s ease-in;
+			}
 
 			&-Active {
-				background-color: $primary;
+				background-color: $green;
 			}
 		}
 	}
