--- a/src/components/Community/Community.scss
+++ b/src/components/Community/Community.scss
@@ -26,6 +26,29 @@
 			margin: 1rem;
 			padding: 1rem;
 			cursor: pointer;
+
+			&-Title {
+				font-size: $font_25;
+				font-weight: bold;
+			}
+
+			&-Top {
+				display: flex;
+				display: -webkit-flex;
+				align-items: center;
+				margin-bottom: 1rem;
+
+				& > img {
+					width: 50px;
+					height: 50px;
+					border-radius: 50%;
+					margin-right: 10px;
+				}
+			}
+
+			& > * {
+				word-break: break-all;
+			}
 		}
 	}
 
