--- a/src/components/Common/Header/Header.scss
+++ b/src/components/Common/Header/Header.scss
@@ -3,5 +3,14 @@
 .Header {
 	width: 100%;
 	height: 70px;
-	background-color: $white;
+	background-color: $boldBlue;
+
+	&-Contents {
+		height: 100%;
+		display: flex;
+		display: -webkit-flex;
+		align-items: center;
+		justify-content: space-between;
+		padding: 0 1rem;
+	}
 }
