--- a/src/components/Common/Navbar/Navbar.scss
+++ b/src/components/Common/Navbar/Navbar.scss
@@ -21,9 +21,9 @@
 			display: -webkit-flex;
 			flex-direction: column;
 			align-items: center;
-			justify-content: space-around;
+			justify-content: center;
 			width: 100%;
-			height: calc(100vh / 6);
+			height: calc(100vh / 4);
 			cursor: pointer;
 
 			&:hover {
