--- a/src/components/MyInfo/MyInfo.scss
+++ b/src/components/MyInfo/MyInfo.scss
@@ -22,6 +22,17 @@
 		background-color: rgba(0, 0, 0, 0.4);
 	}
 
+	&-Contents {
+		display: flex;
+		display: -webkit-flex;
+		flex-direction: column;
+		justify-content: center;
+
+		& > * {
+			margin-bottom: 5px;
+		}
+	}
+
 	&-Top {
 		display: flex;
 		display: -webkit-flex;
